app/src/app.css
/* ... */
.content-header a,
.content-header button {
	float: right;
}

.content-details {
	--mask-height: 1.5rem;

	flex-grow: 1;
	padding: 1.5rem;
}

.content-footer {
	padding: 0 1.5rem 1.5rem;
}

.content-actions {
	display: flex;
	flex-wrap: wrap;
	gap: 0.5rem;
	margin-top: 1.5rem;
}

.content-actions .delete {
	color: var(--color-red-500);
	margin-left: auto;
}

.icons {
	display: flex;
	flex-shrink: 0;
	gap: 1rem;
	margin-left: auto;
}

.icons-element {
	--padding-x: 0;
	--padding-y: 0;

	border: none;
}

.icons-element:hover {
	--button-hover-background: transparent;

	color: var(--color-gray-500);
}

.details {
	color: var(--color-gray-500);
	display: flex;
	flex-direction: column;
	gap: 2rem;
}

.details-tab {
	display: flex;
	flex-direction: column;
	gap: 1.5rem;
}

.details-title {
	align-items: center;
	color: var(--color-gray-800);
	display: flex;
	font-size: 1.125rem;
	font-weight: 600;
	gap: 0.5rem;
	justify-content: space-between;
}

.details-title > a, .details-title > button {
	flex-shrink: 0
}

.details h3 {
	color: var(--color-gray-800);
	font-size: inherit;
	font-weight: 500;
	margin-bottom: 0.875rem;
}

.details-editable {
	--editor-style: new;

	container-type: inline-size;
	font-size: 0.875rem;
	padding-left: 4rem;
}

.details-editable .details-tab {
	gap: 0.5rem;
}

.details-editable h2 {
	color: var(--color-gray-900);
	font-size: 2.25rem;
	font-weight: 700;
	line-height: 1.25;
	margin-bottom: 0.75rem;
	margin-top: 3rem;
}

.details-editable h3 {
	color: var(--color-gray-700);
	font-size: 1.5rem;
	font-weight: 600;
	line-height: 1.25;
	margin-bottom: 0.5rem;
}

.meta {
	display: flex;
	flex-direction: row;
	flex-wrap: wrap;
}

.meta-key {
	flex: 0 1 calc(40rem * 999 - 100% * 999);
	min-width: 10rem;
}

.meta-value {
	flex: 1 1 calc(40rem * 999 - 100% * 999);
}

.meta-value--category {
	display: flex;
	flex-wrap: wrap;
	gap: 0.25rem;
}

.meta-value > svg {
	display: inline;
	vertical-align: top;
}

.data-grid {
	border-left: solid 2px var(--color-gray-200);
	display: grid;
	gap: 0.5rem;
	padding-left: 1.5rem;
}

.data-grid .label {
	min-height: 2.25rem;
	padding: 0.375rem 0;
}

.data-grid .value {
	padding: 0.375rem;
}

@container (min-inline-size: 40rem) {
	.data-grid {
		grid-template-columns: 1fr 3fr;
	}

	.data-grid > * {
		grid-column: 1 / -1;
	}

	.data-grid > .label {
		grid-column: 1 / 2;
	}

	.data-grid > .label + * {
		grid-column: 2 / 3;
	}
}

/* Markdown editor and viewer */
.markdown-body ol,
.milkdown .editor ol,
.markdown-body ul:not(.contains-task-list),
.milkdown .editor ul:not(.contains-task-list) {
	list-style: revert;
	padding-inline-start: 1.5rem;
}

.markdown-body p,
.milkdown .editor > p,
.milkdown .editor > ul,
.milkdown .editor > ol {
	margin: 0.875rem 0;
}

.markdown-body > *:first-child,
.milkdown .editor > *:first-child {
	margin-top: 0;
}

.markdown-body > *:last-child,
.milkdown .editor > *:last-child {
	margin-bottom: 0;
}

.markdown-body a,
.milkdown .editor a {
	text-decoration: underline;
}

.milkdown-tooltip {
	position: absolute;
}

.milkdown [data-show='true'] {
	display: block;
}

.milkdown [data-show='false'] {
	display: none;
}

/* Fade out overflow effect */
.masked-overflow {
	--mask-image-content: linear-gradient(
		to bottom,
		transparent,
		black var(--mask-height, 2rem),
		black calc(100% - var(--mask-height, 2rem)),
		transparent
	);
	--mask-size-content: 100% 100%;

	mask-image: var(--mask-image-content);
	mask-size: var(--mask-size-content);
	mask-position:
		0 0,
		100% 0;
	mask-repeat: no-repeat, no-repeat;
	overflow-y: auto;
	padding-bottom: var(--mask-height, 2rem);
}

/* Vertical scroll wrapper */
.vertical-scroll-wrapper {
	--mask-height: 0.875rem;

	display: flex;
	flex-direction: column;
	gap: 0.75rem;
	padding: var(--mask-height) 0;
}

/* Badges */
.badge {
	--button-background: var(--color-indigo-050);
	--color: var(--color-indigo-500);

	align-items: center;
	background-color: var(--button-background);
	border-radius: 6px;
	color: var(--color);
	display: inline-flex;
	justify-content: center;
	font-size: 0.875rem;
	gap: 0.25rem;
	padding: 0.125rem 0.625rem;
	text-align: center;
	white-space: nowrap;
}

.badge.badge--large {
	font-size: larger;
	padding: 0.25rem 0.75rem;
}

.badge.badge--gray {
	--button-background: var(--color-gray-100);
	--color: var(--color-gray-900);
}

.badge.badge--red {
	--button-background: var(--color-red-100);
	--color: var(--color-red-800);
}

.badge.badge--orange {
	--button-background: var(--color-orange-100);
	--color: var(--color-orange-800);
}

.badge.badge--pink {
	--button-background: var(--color-pink-100);
	--color: var(--color-pink-800);
}

.badge.badge--purple {
	--button-background: var(--color-purple-100);
	--color: var(--color-purple-800);
}

.badge.badge--yellow {
	--button-background: var(--color-yellow-100);
	--color: var(--color-yellow-800);
}

.badge.badge--green {
	--button-background: var(--color-green-100);
	--color: var(--color-green-800);
}

.badge > svg {
	height: 1rem;
	max-width: initial;
	width: 1rem;
}

/* Tabs */
.tabs {
	display: flex;
	flex-basis: 100%;
	gap: 1rem;
	justify-content: flex-start;
}

/* Overlay */
.overlay {
	background-color: white;
	box-shadow: var(--shadow-lg);
	display: flex;
	flex-direction: column;
	height: 100vh;
	margin-left: -0.375rem;
	position: relative;
	padding: 0;
	top: calc(var(--nav-height) * -1);
	width: 100%;
	z-index: 3;
}

/* Carousel */
.carousel {
	display: grid;
	gap: 1rem;
	grid-auto-columns: 20rem;
	grid-auto-flow: column;
	grid-template-rows: repeat(3, min-content);
	overflow-x: auto;
	padding: 1.5rem 0;
}

.carousel > li {
	--card-style: carousel;

	display: grid;
	grid-row: 1 / 4;
	grid-template-rows: subgrid;
}

.carousel-toolbar {
	display: flex;
	gap: 0.5rem;
	padding: 0.375rem 0;
}
/* ... */

